# skola-grind-first-year

./: .gitignore  README.md  ukol1.c  ukol2.c  ukol3.c
ALG1/alg1_cv3/: alg1_cv3.sln  alg1_cv3.vcxproj  main.cpp
ALG1/alg1_cv4/: agl1_cv4.sln  agl1_cv4.vcxproj  main.cpp
ALG1/alg1_cv5/: alg1_cv5.sln  alg1_cv5.vcxproj  main.cpp
ALG1/alg1_cv6/: alg1_cv6.sln  alg1_cv6.vcxproj  main.cpp
ALG1/alg1_cv7/: Graph.cpp  Graph.h  alg_cv7.sln  alg_cv7.vcxproj  main.cpp
ALG1/alg1_cv8/: BSTree.cpp  BSTree.h  alg1_cv8.sln  alg1_cv8.vcxproj  alg1_cv8.vcxproj.filters  main.cpp
ALG1/alg1_cv9/: alg1_cv9.sln  alg1_cv9.vcxproj  main.cpp
ALG1/alg1_project/: Doxyfile  alg1_project.sln  alg1_project.vcxproj  alg1_project.vcxproj.filters  input.txt  main.cpp  output.txt
APPS/: .gitignore
APPS/0b00/: asm-module.asm  c-main.c
APPS/0b01 prep/: asm-module.asm  c-main.c
APPS/0b10 prep/: asm-module.asm  asm-modulefr.asm  c-main.c
APPS/0b11 prep/: asm-module.asm  c-main.c
APPS/cuda1/: cuda4_unm.cu  main4_unm.cpp
APPS/cuda2/: cuda5_unm.cu  main5_unm.cpp
APPS/cuda3/: animation.h  cuda6_unm_ani.cu  cuda_img.h  main6_unm_ani.cpp
APPS/example/: asm-module.asm
APPS/lcd1/: graph_class.hpp  main-lcd-simul.cpp
APPS/lcd2/: graph_class.hpp  main-lcd-simul.cpp
APPS/led1/: main-leds.cpp
APPS/led2/: main-leds.cpp
FPR/: cookedOpacko.hs  cviko.hs  tryhard.hs  ukol1.hs  ukolTest.hs
FPR/priprava/: goat.hs  test2.hs  testik2v1.hs  testik2v2.hs  testik2v2v1.hs  testik2v2v2.hs  testik2v3.hs  testik2v4.hs  testik2v5.hs  testik2v6.hs  testik2v7.hs  testik2vo1.hs  testik2vo2.hs
OOP/: cv1.cpp
OOP/oop_cv2/: a.out  cv2.cpp  cv2_ukol.cpp  cvika.sln  cvika.vcxproj  cvika.vcxproj.filters
UPR/: cviko.c  cvikoSDL.c  cvikotga.c  cvikotga.h  ukol1.c  ukol2.c  ukol4.c  ukol5.c  ukol6.c  ukol7.c  ukol8.c
UPR/project/: CMakeLists.txt  README.md  README.txt  alien.c  alien.h  dynamic_array.c  globals.h  main.c  menu.c  menu.h  player.c  player.h  text.c  text.h
UPR/ukol10/: CMakeLists.txt  ukol10.c
(+389 files in other folders)
